some changes in reports